# aoc-2024

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  devenv.nix  devenv.yaml
data/inputs/: BUILD.bazel
src/: BUILD.bazel  main.cpp
src/day/01/: 01.cpp  01.hpp  BUILD.bazel
src/day/02/: 02.cpp  02.hpp  BUILD.bazel
src/day/03/: 03.cpp  BUILD.bazel
src/day/04/: 04.cpp  BUILD.bazel
src/day/05/: 05.cpp  BUILD.bazel
src/day/06/: 06.cpp  BUILD.bazel
src/day/07/: 07.cpp  BUILD.bazel
src/day/08/: 08.cpp  BUILD.bazel
src/day/09/: 09.cpp  BUILD.bazel
src/day/10/: 10.cpp  10.hpp  BUILD.bazel  main.cpp  test.cpp
src/day/11/: 11.cpp  11.hpp  BUILD.bazel  main.cpp  test.cpp
src/day/12/: 12.cpp  12.hpp  BUILD.bazel  main.cpp  test.cpp
src/day/13/: 13.cpp  13.hpp  BUILD.bazel  main.cpp  test.cpp
src/tpl/: BUILD.bazel.j2  day.cpp.j2  day.hpp.j2  main.cpp.j2  test.cpp.j2
src/util/: BUILD.bazel  cli.cpp  cli.hpp
src/util/cli/: BUILD.bazel  cli.cpp  cli.hpp
src/util/day/: BUILD.bazel  day.cpp  day.hpp
src/util/user/: BUILD.bazel
