# load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "cli",
    srcs = ["cli.cpp"],
    hdrs = ["cli.hpp"],
    data = ["@aoc-cli//:bin/aoc"],
    deps = [
        "//src/util/day",
        "@rules_cc//cc/runfiles",
        "@reproc",
    ],
    visibility = ["//src:__subpackages__"],
)
